# flux-pymcprotocol_fxseries

./: LICENSE  README.md  pyproject.toml
src/pymcprotocol_fxseries/: __init__.py  mcprotocol_error.py  sock_base.py  type1e.py  type1e_const.py  utility.py
tests/: test_basic.py  test_connect.py  test_server.py
